--- a/src/styles/scss/nord.scss
+++ b/src/styles/scss/nord.scss
@@ -169,16 +169,27 @@ Links:
   overflow: hidden;
 }
 
-/* -------------------------------------------------- TAGS */
-.prettify-tags {
+/* -------------------------------------------------- BOTTOM STATUS */
+.prettify-bottom-status {
   margin: 2em;
   display: flex;
-  flex-flow: row wrap;
-  font-size: var(--font-size-small);
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1em;
+  flex-wrap: nowrap;
 
   .mobile & {
     margin: 1em;
   }
+}
+
+/* -------------------------------------------------- TAGS */
+.prettify-tags {
+  display: flex;
+  flex-flow: row wrap;
+  font-size: var(--font-size-small);
+  flex: 1;
+  min-width: 0;
 }
 
 .prettify-tag {
@@ -202,6 +213,17 @@ Links:
     color: var(--tag-fg-active);
     cursor: pointer;
   }
+}
+
+/* -------------------------------------------------- CARD INFO */
+.prettify-card-info {
+  display: flex;
+  flex-flow: row wrap;
+  font-size: var(--font-size-small);
+  color: var(--text-fg-faint);
+  align-items: center;
+  flex-shrink: 0;
+  white-space: nowrap;
 }
 
 /* -------------------------------------------------- DIVIDER */
